<resources>
    <string name="app_name">Ficha Familiar</string>
    <string name="manual_app">Manual de la App</string>
    <string name="instructivo_ff">Instructivo de la FF</string>
    <string name="acerca_de">Acerca de</string>
    <string name="informacion">Gestiona la información de las Fichas Familiares pertenecientes a las áreas intervenidas en el nuevo modelo de salud familiar</string>
    <string name="title_activity_login_">Inicio de sesion</string>
    <string name="txt_user">Usuario:</string>
    <string name="txt_pass">Password:</string>
    <string name="title_activity_menu">Menu</string>
    <string name="txt_user_menu">Usuario:</string>
    <string name="entrar">Entrar:</string>
    <string name="title_activity_ficha_familia_activity">Información de la vivienda</string>
    <string name="title_1">Viceministerio de Servicios de Salud</string>
    <string name="title_2">Dirección de Primer Nivel</string>
    <string name="nombre_ficha_anio">Ficha Familiar 20xx</string>
    <string name="nombre_establecimiento">(1) Nombre del establecimiento:</string>
    <string name="codigo_ecosf">(2) Código de ECOSF:</string>
    <string name="num_expediente_familiar">(3) Número de expediente familiar:</string>
    <string name="depto">Depto</string>
    <string name="municipio">Municipio</string>
    <string name="area">Area</string>
    <string name="canton_barrio_colonia">Canton /Barrio o Colonia</string>
    <string name="zona">Zona</string>
    <string name="n_vivienda">N° Vivienda</string>
    <string name="n_familia">N° Familia</string>
    <string name="fecha_llenado">(4) Fecha de llenado:</string>
    <string name="direccion_vivienda">(5) Dirección de la vivienda:</string>
    <string name="situacion_vivienda">(6) Situación de la vivienda:</string>
    <string name="religion_familia">(7) Religión a la que pertenece la familia:</string>
    <string name="pueblo_indigena_familia">(8) Pueblo indígena de la familia:</string>
    <string name="tipo_familia">(9) Tipo de familia:</string>
    <string name="btn_guardar_familia">Guardar información</string>
    <string name="title_activity_ficha_familia_ativity_01">Información de la familia</string>
    <string name="caract_vivienda">Características de la vivienda</string>
    <string name="tipo_vivienda">(10) Tipo de vivienda:</string>
    <string name="tipo_tenencia_vivienda">(11) Tipo de tenencia de vivienda:</string>
    <string name="material_paredes">(12) Material predominante de las paredes:</string>
    <string name="material_piso">(13) Material predominante del piso:</string>
    <string name="material_techo">(14) Material predominante del techo:</string>
    <string name="patrimonio_vivienda">Patrimonio</string>
    <string name="num_habitaciones">(15) Numero de habitaciones (dormitorios):</string>
    <string name="otros_espacios">(16) Número de espacios de la vivienda (no dormitorios) utilizados para dormir habitualmente:</string>
    <string name="bienes_familia">(17) Bienes de la familia:</string>
    <string name="cultivo_agricola_propio">Cultivo agrícola propio</string>
    <string name="aves_corral">Aves de corral</string>
    <string name="ganado_vacuno">Ganado vacuno</string>
    <string name="ganado_porcino">Ganado porcino</string>
    <string name="negocio_propio">Negocio propio</string>
    <string name="ninguno">Ninguno</string>
    <string name="bienes_hogar">(18) Bienes basicos en el hogar:</string>
    <string name="radio">Radio</string>
    <string name="equipo_sonido">Equipo de sonido</string>
    <string name="televisor">Televisor</string>
    <string name="refrigeradora">Refrigeradora</string>
    <string name="lavadora">Lavadora</string>
    <string name="computadora">Computadora</string>
    <string name="vehiculo">(19) Vehículo para uso del hogar:</string>
    <string name="amenazas">Amenazas</string>
    <string name="riesgo_ambiental">(20) Por exposición a riesgo ambiental:</string>
    <string name="sinriesgo">Sin riesgo</string>
    <string name="deslaves">Deslaves</string>
    <string name="inundaciones">Inundaciones</string>
    <string name="desechos">Contaminación por disposición inadecuada de desechos sólidos, químicos</string>
    <string name="erupcion">Erupción</string>
    <string name="otros_riesgos">Otros riesgos</string>
    <string name="combustible_cocinar">(21) Predominantemente que tipo de combustible utiliza para cocinar:</string>
    <string name="servicios_basicos">Servicios Básicos</string>
    <string name="alumbradoPrincipalmente">(22) Alumbrado utilizado principalmente:</string>
    <string name="medios_comunicacion">(23) Medio de comunicación con que cuenta el hogar:</string>
    <string name="telefono_fijo">Teléfono fijo</string>
    <string name="telefono_celular">Teléfono celular</string>
    <string name="internet">Internet</string>
    <string name="cable">Cable</string>
    <string name="no_tiene">No tiene</string>
    <string name="abastecimiento_agua">(24) Abastecimiento de agua:</string>
    <string name="tratamiento_agua_consumo_humano">(25) Tratamiento de agua para consumo humano que realiza la familia:</string>
    <string name="tiene_servicio_sanitario">(26) Tiene servicio sanitario:</string>
    <string name="tipo_servicio_sanitario">(27) Tipo de servicio sanitario en la vivienda:</string>
    <string name="colaborador_hogar">(28) Colaborador(a) para servicios del hogar:</string>
    <string name="manejo_desechos">Manejo de desechos</string>
    <string name="manejo_aguas_grises">(29) Manejo de aguas grises:</string>
    <string name="manejo_aguas_negras">(30) Manejo aguas negras:</string>
    <string name="manejo_basura">(31) Manejo de basura:</string>
    <string name="vectores">Vectores</string>
    <string name="presencia_vectores">(32) Presencia de Vectores:</string>
    <string name="zancudos">Zancudos</string>
    <string name="chinches_picudas">Chinches Picudas:</string>
    <string name="moscas">Moscas</string>
    <string name="cucarachas">Cucarachas</string>
    <string name="roedores">Roedores</string>
    <string name="otros">Otros</string>
    <string name="no_vectores">No hay presencia de vectores</string>
    <string name="tenencia_mascotas">Tenencias de Mascotas</string>
    <string name="num_perros">(33) N° de peros:</string>
    <string name="num_gatos">(34) N° de gatos:</string>
    <string name="num_otras_mascotas">(35) N° de otras mascotas:</string>
    <string name="title_activity_ficha_familia_activity_02">Información de la familia</string>
    <string name="presencia_vectoresFFFFFF">Presencia de Vectores</string>
    <string name="zancudosFFFF">(26) Zancudos:</string>
    <string name="moscasFFFF">(27) Moscas:</string>
    <string name="chinches_picudasFFF">(28) Chinches Picudas:</string>
    <string name="cucarachasFFFF">(29) Cucarachas:</string>
    <string name="roedoresFFFF">(30) Roedores:</string>
    <string name="tenencia_mascotasFFF">Tenencias de Mascotas</string>
    <string name="num_perrosFF">(31) N°Peros:</string>
    <string name="num_perros_vacunadosFF">(32) N° Perros vacunados:</string>
    <string name="num_gatosFF">(33) N° Gatos:</string>
    <string name="num_gatos_vacunados">(34) N° Gatos vacunados:</string>
    <string name="num_otras_mascotasFFF">(35) N° Otras mascotas:</string>
    <string name="patrimonio_familiar">Patrimonio Familiar</string>
    <string name="bono">(41) Bono de CSR o CSU:</string>
    <string name="vehiculo_automotor">(42) Vehículo automotor:</string>
    <string name="observaciones_02"> Observaciones:</string>
    <string name="ubicacion_vivienda">Ubicación GPS de la vivienda</string>
    <string name="datos_generales"> Datos Generales</string>
    <string name="correlativo_miembro_familia">(36) N° correlativo</string>
    <string name="primer_nombre">Primer nombre</string>
    <string name="segundo_nombre">Segundo nombre</string>
    <string name="tercer_nombre">Tercer nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="apellido_casada">Apellido casada</string>
    <string name="nacionalidad">(40) Nacionalidad</string>
    <string name="sexo">(41) Sexo biológico:</string>
    <string name="fecha_nacimiento">(42) Fecha de nacimiento</string>
    <string name="edad">(43) Edad actual</string>
    <string name="edad_anios">Años</string>
    <string name="edad_meses">Meses</string>
    <string name="edad_dias">Días</string>
    <string name="parentesco_con_jefe_familia">(44) Parentesco con el/la jefe de familia</string>
    <string name="institucion_cotizante_beneficiario">(50) Institución de la que es cotizante o beneficiario</string>
    <string name="tipo_discapacidad">(60) Tipo de discapacidad</string>
    <string name="intelectual">Intelectual</string>
    <string name="sensorial">Sensorial</string>
    <string name="fisica">Física</string>
    <string name="mental_psiquiatrica">Mental o Psiquiatrica</string>
    <string name="organica">Orgánica</string>
    <string name="sindiscapacidad">Sin discapacidad</string>
    <string name="causa_discapacidad">(61) Causa de discapacidad</string>
    <string name="congenita_hereditaria">Congénita o Hereditaria</string>
    <string name="accidentes_tramautismo">Accidente o traumatismo</string>
    <string name="minas">Por minas</string>
    <string name="otros_artefactos">Otros artefactos del conflicto armado</string>
    <string name="secuela_enfermedad">Secuela enfermedad o causa degenerativa</string>
    <string name="no_aplica">No aplica</string>
    <string name="actividades_asistencia">(62) Actividades que requiere asistencia</string>
    <string name="aseo_personal">Aseo personal</string>
    <string name="necesidades_fisiologicas">Necesidades fisiologicas</string>
    <string name="caminar_correr">Caminar, correr</string>
    <string name="asistir_consulta">Asistir a consulta y tratamientos</string>
    <string name="ninguna_actividad">Ninguna</string>
    <string name="otras_actividades">Otras actividades</string>
    <string name="enfermedades_cronicas">(63) Padece enfermedad(es) crónica(s)</string>
    <string name="nopresenta">No presenta enfermedad crónica</string>
    <string name="hipertencion_arterial">Hipertención arterial</string>
    <string name="diabetes_mellitus">Diabetes mellitus</string>
    <string name="respiratorias_epoc">Respiratorias EPOC</string>
    <string name="asma_bronquial">Asma bronquial</string>
    <string name="alguna_cancer">Algun tipo de cancer</string>
    <string name="accidente_cerebrovascular">Accidente cerebro vascular</string>
    <string name="enfermedad_renal_cronica">Enfermedad renal crónica</string>
    <string name="epilepsia">Epilepsia</string>
    <string name="otra_cronica">Otra enfermedad crónica</string>
    <string name="medicamentos_enfermedad_cronica">(64) Medicamento(s) para enfermedad crónica:</string>
    <string name="situacion_salud">Situacion de salud</string>
    <string name="causa_discapacidad2">(57) Causa de discapacidad</string>
    <string name="padece_enfermedad_cronica">(58) Padece alguna(s) enfermedad crónica</string>
    <string name="toma_medicamentos">(59) Toma medicamento(s) para enfermedad cronica</string>
    <string name="estado_nutricional2">(60) Estado nutricional</string>
    <string name="fuma2">(61) Fuma</string>
    <string name="frecuencia_consumo_bebida_embriagantes">(62) Frecuencia de consumo de bebidas embriagantes</string>
    <string name="cantidad_bebida_embriagante_dia">(63) Cantidad de consumo de bebida embriagante por dia</string>
    <string name="citologia_ultimo_anio">(64) Se ha tomado la citologia en el ultimo año</string>
    <string name="examen_manual_mamas">(65) Se ha realizado el examen manual de mamas en el ultimo año</string>
    <string name="expediente_familiar">Número de expediente familiar:</string>
    <string name="desc">Banner</string>
    <string name="salud">Salud</string>
</resources>