<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
         	 android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     xmlns:tools="http://schemas.android.com/tools"
		     android:background="#FFFFFF">		     

	<RelativeLayout
	    android:layout_width="900dp"
	    android:layout_height="183dp"
	    android:layout_gravity="center"
	    android:layout_marginTop="10dp"
	    tools:context=".Menu_Activity_"
	    android:background="#FFFFFF" >

	     <LinearLayout
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content">
	         <TextView
	             android:layout_width="350dp"
	             android:layout_height="40dp"
	             android:layout_marginLeft="300dp"
	             android:layout_weight="0.32"
	             android:gravity="center"
	             android:textColor="#011254"
	             android:text="@string/expediente_familiar"
	             android:textSize="25sp" />
	     </LinearLayout>
	     <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp">
	     <Spinner
            android:id="@+id/sp_depto"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"/>
	     <Spinner
            android:id="@+id/sp_municipio"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp" />
	     <Spinner
            android:id="@+id/sp_area"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp" />
	     <Spinner
            android:id="@+id/sp_canton_barrio_colonia"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp" />
	     <Spinner
            android:id="@+id/sp_zona"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp" />
	     <EditText
            android:layout_marginLeft="20dp"
            android:maxLength="6" 
            android:inputType="number" 
            android:id="@+id/txt_num_vivienda"
            android:layout_width="100dp"
            android:layout_height="40dp" >
        </EditText>
         <EditText
            android:id="@+id/txt_num_familia"
            android:layout_marginLeft="20dp"
            android:maxLength="6" 
            android:inputType="number"                     
            android:layout_width="100dp"
            android:layout_height="40dp" >
        </EditText>
        </LinearLayout>
        <LinearLayout
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:layout_marginTop="100dp"
	              android:layout_marginLeft="25dp"> 
                 <TextView
                  android:layout_width="75dp"
                  android:layout_height="wrap_content"
                  android:text="@string/depto"
                  android:textSize="15sp"
                  android:textColor="#011254"
                  android:layout_marginLeft="30dp"/>
                 <TextView
                  android:layout_width="83dp"
                  android:layout_height="wrap_content"
                  android:text="@string/municipio"
                  android:textSize="15sp"
                  android:textColor="#011254"
                  android:layout_marginLeft="35dp"/>
                  <TextView
                  android:layout_width="64dp"
                  android:layout_height="wrap_content"
                  android:text="@string/area"
                  android:textSize="15dp"
                  android:textColor="#011254"
                  android:layout_marginLeft="50dp"/>
                 <TextView
                  android:layout_width="150dp"
                  android:layout_height="wrap_content"
                  android:text="@string/canton_barrio_colonia"
                  android:textSize="15sp"
                  android:textColor="#011254"
                  android:layout_marginLeft="20dp"/>
                 <TextView
                  android:layout_width="75dp"
                  android:layout_height="wrap_content"
                  android:text="@string/zona"
                  android:textSize="15sp"
                  android:layout_marginLeft="15dp"
                  android:textColor="#011254"/>
                 <TextView
                  android:layout_width="100dp"
                  android:layout_height="wrap_content"
                  android:text="@string/n_vivienda"
                  android:textSize="15sp"
                  android:layout_marginLeft="30dp"
                  android:textColor="#011254"/>
                <TextView
                  android:layout_width="112dp"
                  android:layout_height="wrap_content"
                  android:text="@string/n_familia"
                  android:textSize="15dp"
                  android:textColor="#011254"
                  android:layout_marginLeft="20dp"/>        
            	</LinearLayout>
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" 
                android:layout_marginTop="150dp">
                <ImageButton
                    android:id="@+id/busqueda_familia"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.50"
                    android:background="#FFFFFF"
                    android:onClick="result_busqueda_familia"
                    android:src="@drawable/lupa" />
            </LinearLayout>  
</RelativeLayout>
    </ScrollView>